--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,30 @@ version: '3.1'
 services:
   postgresql:
     container_name: postgresql
-    image: postgres:14.2
+    image: docker.io/postgres:14.2
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - 5433:5432
+    networks: 
+      - biblioteca-network
+  pgadmin:
+    container_name: pgadmin
+    image: docker.io/dpage/pgadmin4:7.7
+    environment:
+      PGADMIN_DEFAULT_EMAIL: email@email.com
+      PGADMIN_DEFAULT_PASSWORD: pgadmin
+    ports:
+      - 15433:80
+    depends_on:
+      - postgresql
+    networks: 
+      - biblioteca-network
+networks:
+  biblioteca-network:
+    driver: bridge
 volumes:
   postgresql:
     external: true
